--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <script src="assets/js/script.js" defer></script>
     </head>
     <body>
-        
+        <section class="produto"></section>
     </body>
 </html>
